--- a/JS/code/BOM/index.html
+++ b/JS/code/BOM/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="./script2.js"></script>
-
+    <button id="btn">start video</button>
+    <video src="" id="vd" height="500" width="500" autoplay muted></video>
+    <script src="./index.js"></script>
 </body>
 </html>
