--- a/JS/code/advanced-types/index.html
+++ b/JS/code/advanced-types/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="./script2.js"></script>
-
+  <script src="./index.js"></script>  
 </body>
 </html>
