--- a/Final-Project/product.html
+++ b/Final-Project/product.html
@@ -33,14 +33,18 @@
         </nav>
     </header>
     <main>
-          <h1 class=" text-center">Products List</h1>
-          <div id="productsList"></div>
+          <h1 class=" text-center">Product Data</h1>
+          <div id="productData" class=" container">
+            <div class="row">
+                <div class="col-12 col-lg-6" id="left"></div>
+                <div class="col-12 col-lg-6" id="right"></div>
+            </div>
+          </div>
 
     </main>
     <footer class="text-center text-white bg-black p-3">This site is developed by <span class=" text-primary">XYZ</span> &copy; 2024</footer>
-    <script src="./script.js"></script>
+    <script src="./product.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="./common.js"></script>
-
+   <script src="./common.js"></script>
 </body>
 </html>
