--- a/Final-Project/cart.html
+++ b/Final-Project/cart.html
@@ -24,7 +24,7 @@
                     <a href="" class="nav-link text-white">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./cart.html" class="nav-link text-white">
+                    <a href="" class="nav-link text-white">
                         Cart: <span id="count">0</span>
                     </a>
                 </li>
@@ -33,14 +33,14 @@
         </nav>
     </header>
     <main>
-          <h1 class=" text-center">Products List</h1>
-          <div id="productsList"></div>
+          <h1 class=" text-center">Cart Data</h1>
+          
+          </div>
 
     </main>
     <footer class="text-center text-white bg-black p-3">This site is developed by <span class=" text-primary">XYZ</span> &copy; 2024</footer>
-    <script src="./script.js"></script>
+    <script src="./cart.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="./common.js"></script>
-
+   <script src="./common.js"></script>
 </body>
 </html>
