--- a/Final-Project/cart.html
+++ b/Final-Project/cart.html
@@ -34,12 +34,17 @@
     </header>
     <main>
           <h1 class=" text-center">Cart Data</h1>
-          
+             
+          <div class="container">
+            <div id="cartData">
+
+          </div>
+           <div>Total:$ <span id="total"></span></div>
           </div>
 
     </main>
     <footer class="text-center text-white bg-black p-3">This site is developed by <span class=" text-primary">XYZ</span> &copy; 2024</footer>
-    <script src="./cart.js"></script>
+    <script src="./cart.js" ></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    <script src="./common.js"></script>
 </body>
